--- a/README
+++ b/README
@@ -1,19 +1,23 @@
-Learning und Softcomputing, Sommersemester 2015
-===============================================
+Learning und Softcomputing Project
+==================================
 
-Teilnehmer Gruppe 7:
-	- Maurice Tollmien, 101074, maurice.tollmien@gmail.com 
-	- Jens Begemann, 101419, inf101419@fh-wedel.de
+Project participants:
+	- Maurice Tollmien, maurice.tollmien@gmail.com 
+	- Jens Begemann, inf101419@fh-wedel.de
 
-=================================================================================================================
+==================================
 
-Inhalt dieses Verzeichnisses:
+This project is about implementing and creating a neural network with the ability to classify characters.
+The implementation is in Python and uses no external resources or libraries except numpy.
+The final results are competitive with existing frameworks, such as Pybrain or others.
 
-./docs      		--> Dokumente (Aufgabenstellung, Ausarbeitung zum Projekt)
+./docs	--> All documents regarding the task and boundary conditions.
 
-./src			--> vollständig übersetzbarer Quellcode incl. Projekt-File 
-			--> Das fertige neuronale Netz und ausführbare Programm liegt in ./src/ANN/ann_Nlayers_Real_Data.py
+./src	--> Complete sourcecode for this project.
+	--> Artificial neural network with backpropation: ./src/ANN/ann_Nlayers_Real_Data.py
+	--> You can test or run the program by just calling it with python!
+		cd ./src/ANN/
+		python ann_Nlayers_Real_Data.py
 
 
-=================================================================================================================
-
+==================================
